--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "chart.js": "^3.8.0",
+    "d3": "^7.5.0",
     "react": "18.0.0",
-    "react-native": "0.69.1"
+    "react-native": "0.69.1",
+    "react-native-svg": "^12.3.0",
+    "victory-chart": "^36.5.3",
+    "victory-native": "^36.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
