--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "amcharts": "^3.14.5",
     "chart.js": "^3.8.0",
     "d3": "^7.5.0",
     "react": "18.0.0",
     "react-native": "0.69.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-svg": "^12.3.0",
+    "recharts": "^2.1.12",
     "victory-chart": "^36.5.3",
     "victory-native": "^36.5.3"
   },
@@ -26,7 +29,8 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
-    "react-test-renderer": "18.0.0"
+    "react-test-renderer": "18.0.0",
+    "typescript": "^4.7.4"
   },
   "jest": {
     "preset": "react-native"
