--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "amcharts": "^3.14.5",
     "chart.js": "^3.8.0",
     "d3": "^7.5.0",
+    "d3.js": "^0.0.2-security",
     "react": "18.0.0",
     "react-native": "0.69.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-svg": "^12.3.0",
     "recharts": "^2.1.12",
+    "topojson-client": "^3.1.0",
     "victory-chart": "^36.5.3",
     "victory-native": "^36.5.3"
   },
