--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.69.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-svg": "^12.3.0",
+    "react-native-svg-charts": "^5.4.0",
     "recharts": "^2.1.12",
     "topojson-client": "^3.1.0",
     "victory-chart": "^36.5.3",
